[lib]
crate-type =["cdylib"]

[package]
name = "http"
version = "0.1.0"
authors = ["Eduardo Tongson <propolice@gmail.com>"]
edition = "2018"

[dependencies]
ureq = { version = "1.5.2", default-features = false, features = ["tls"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
debug = false
